--- a/Final/chatbot/index.html
+++ b/Final/chatbot/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Chat Bot</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -43,13 +43,13 @@
     </div>
 
     <script src="https://unpkg.com/rivescript@latest/dist/rivescript.min.js"></script>
-    <script src="brain.js"></script>
+    <script src="js/brain.js"></script>
     <script src="https://d3js.org/d3.v5.js"></script>
     <script src="https://d3js.org/d3-request.v1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <script src="stock.js"></script>
-    <script src="airquality.js"></script>
-    <script src="weather.js"></script>
+    <script src="js/stock.js"></script>
+    <script src="js/airquality.js"></script>
+    <script src="js/weather.js"></script>
 
 </body></html>
